# EmagFEM

./: .gitignore  CMakeLists.txt  Program41_fem_laplace.m  fem.m
MethodWeightResiduals/Compile/: CMakeLists.txt
MethodWeightResiduals/code/analyze/: parsePetscBin.R  readHDF5.R  sample.R
MethodWeightResiduals/code/include/: Constants.h  petscWrappers.h  wrapMat.h  wrapVec.h
MethodWeightResiduals/code/src/: gridEx.cpp  main.cpp  viennaclEx.cpp
MethodWeightResiduals/code/src/petscWrappers/: CMakeLists.txt  vecWrap.cpp  wrapMat.cpp  wrapVec.cpp
MethodWeightResiduals/code/src/tetgen/: CMakeLists.txt  Example.cpp
MethodWeightResiduals/data/: vector.h5
Petco/Compile/: CMakeLists.txt
Petco/code/include/: Constants.h  petco.h
Petco/code/src/: main.cpp
Petco/code/src/petco/: CMakeLists.txt  (+1 more)
PoissonCPP/: CMakeLists.txt  README.md
PoissonCPP/src/: main.cpp
Spectral/: CMakeLists.txt  Doxyfile
Spectral/analyze/: plotVector.py
Spectral/doc/html/: _constants_8h_source.html  dir_18e3d3a0a7cc6d5eef287377142fa0c1.html  dir_26b5e64ffdb38a7f039ee0c2e82e6a12.html  dir_26e95c14e39a3b2aa874b4ad85a981a5.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68f688088b08b9f77a748cc341e138f2.html  dir_736349e007aabb2b5361872953fc98b3.html  dir_a927de40aaafcd22523ed2ca071f33d8.html  dir_bdac550db024b6203ff502e48baa96f7.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e3295cd5b36c70dba666f4ac52ad2d70.html  dir_e6727dd2ff0b3bcc450c1d5be3ed69f6.html  fem1d_8h.html  fem1d_8h_source.html  files.html  formula.repository  globals.html  globals_func.html  linear_algebra_o_c_v_8h_source.html  matrix_i_o_8h_source.html
Spectral/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
Spectral/doc/latex/: dir_18e3d3a0a7cc6d5eef287377142fa0c1.tex  dir_26b5e64ffdb38a7f039ee0c2e82e6a12.tex  dir_26e95c14e39a3b2aa874b4ad85a981a5.tex  dir_68f688088b08b9f77a748cc341e138f2.tex  dir_736349e007aabb2b5361872953fc98b3.tex  dir_a927de40aaafcd22523ed2ca071f33d8.tex  dir_bdac550db024b6203ff502e48baa96f7.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_e3295cd5b36c70dba666f4ac52ad2d70.tex  dir_e6727dd2ff0b3bcc450c1d5be3ed69f6.tex  fem1d_8h.tex  files.tex  refman.tex
Spectral/include/: Constants.h  fem1d.h  linearAlgebraOCV.h  matrixIO.h  spec1d.h
Spectral/src/: main.cpp
StrangFEM/: StrangFEM.m
StrangFEM/compile/: CMakeLists.txt
StrangFEM/src/: main.cpp
StrangFEM/src/HelloWorld/: ARMA_HelloWorld.cpp  CGAL_HelloWorld.cpp
include/: Grid.h
src/: Grid.cpp  main.cpp
